make homepage refer to localhost:4000 which is our web version of the phone app

--- a/apps/homepage/src/pages/index.astro
+++ b/apps/homepage/src/pages/index.astro
@@ -57,7 +57,9 @@ import '../styles/global.css';
                 <p class="leading-7 [&:not(:first-child)]:mt-6">
                   A fitness app for advanced users.
                 </p>
-                <Button>Try now!</Button>
+                <form action="http://localhost:4000">
+                  <Button type="submit">Try now!</Button>
+                </form>
               </div>
               <div class="relative hidden md:block">
                 <img
