--- a/code/mobile/global.css
+++ b/code/mobile/global.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+[class^='mgc_']::before,
+[class*=' mgc_']::before {
+  color: inherit !important;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
